--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     }
 
     buildFeatures{
-        viewBinding true;
+        viewBinding true
     }
     buildTypes {
         release {
@@ -59,5 +59,8 @@ dependencies {
 
     //wtf is picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //qr scanner
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
 
 }
